--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
     content="OXE-Aug: A Large-Scale Robot Augmentation of OXE for Scaling Cross-Embodiment Policy Learning">
   <meta name="keywords" content="Robotics, Quadruped, Whole-body Control, Whole-body Manipulation">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <meta property="og:title" content="OXE-Aug: A Large-Scale Robot Augmentation of OXE for Scaling Cross-Embodiment Policy Learning">
+  <meta property="og:description" content="OXE-Aug expands the Open-X Embodiment dataset to new robot embodiments through large-scale simulation and inpainting.">
+  <meta property="og:image" content="https://oxe-aug.github.io/static/images/preview.png">
+  <meta property="og:url" content="https://oxe-aug.github.io/">
+  <meta property="og:type" content="website">
+  <meta property="og:site_name" content="OXE-Aug">
+
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="OXE-Aug: Cross-Embodiment Data Augmentation for Robot Learning">
+  <meta name="twitter:description" content="A large-scale robot augmentation of OXE for scaling cross-embodiment policy learning.">
+  <meta name="twitter:image" content="https://oxe-aug.github.io/static/images/preview.png">
   <title>
     OXE-Aug: A Large-Scale Robot Augmentation of OXE for Scaling Cross-Embodiment Policy Learning
   </title>
